--- a/index.html
+++ b/index.html
@@ -82,9 +82,13 @@
 			<div class="row">
 				<div class="col-xs-2"></div>
 				<div class="col-xs-8 leftalign">
-					<h2 class="white">Metapolator turns any existing typeface into an intelligent type family system, so you can express yourself through its dials and sliders.
-<br><br>Today typography is becoming more and more important for us each to express ourselves. Typography has become an extension of who we are. Our choice of words to express the ideas in our minds is important, and so is the way that our typography expresses the emotions in our hearts.
-<br><br>Billions of people are now online and each person need fonts that are tailor-made for themselves and their businesses. With the new Metapolator platform, all font lovers from children to expert professionals can create unique typefaces within large families. Use existing fonts and control them with simple adjustment tools to turn them into the fonts you really want.</h2>
+					<h2 class="white">Metapolator turns any existing outline font into a parameterised font system so you can get the fonts you really want.
+					<br><br>
+					Today typography is becoming more and more important for us each to express ourselves. Typography has become an extension of who we are. Our choice of words to express the ideas in our minds is important, and so is the way that our typography expresses the emotions in our hearts. 
+					<br><br>
+					Billions of people are now online and each person need fonts that are tailor-made for themselves and their businesses. 
+					<br><br>
+					Metapolator’s multidimensional design space lets you explore an almost infinite number of new fonts and font families starting with only a single master font. Metapolator combines a powerful parametric system with an intuitive user interface to make type design inherently consistent and much faster.
 				</div>
 				<div class="col-xs-2"></div>
 			</div>
@@ -273,7 +277,7 @@ single meta-font, we select a pair of fonts and set the metapolation parameter, 
 	    <div class="container-fluid" >
 	    	<div class="row">
 	    		<div class="col-xs-12 centered" >
-	    			<h1>Interpolation × Metapolation</h1>
+	    			<h1>Interpolation x Metapolation</h1>
 	    		</div><!-- /col-lg-8 -->
 	    	</div><!-- /row -->
 	    </div> <!-- /container-fluid -->
