Basic File Upload andularjs module, and angularjs workarounds
File Uploader will help us get a .ufo files and designed to be reusable
component for getting versios files into localstorage

--- a/next/app/glyph-inspector.html
+++ b/next/app/glyph-inspector.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="glyphInspector">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,7 +34,7 @@
   </head>
   <body >
     <h1>Glyph Inspector</h1>
-    <div ng-controller="glyphInspectorCtrl">
-    </div>
+    <glyph-inspector></glyph-inspector>
+
   </body>
 </html>
