--- a/next/app/glyph-inspector.html
+++ b/next/app/glyph-inspector.html
@@ -25,6 +25,7 @@
         dumpLineNumbers: 'mediaquery',
         relativeUrls: false,
     };
+    localStorage.clear();
     </script>
     <script src="/lib/bower_components/less.js/dist/less-1.7.0.min.js"></script>
     <!-- end of less -->
