Update to remove metafont technology from description

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ common processes, and it is fully extendable.</p>
 				</div>
 				<div class=" col-md-4 white leftalign">
 					<h3>Standards</h3>
-					<p>The text-based and interchangeable UFO font source format has become an industry standard. Metapolator imports and exports UFOs, releasing a new animal into the ecosystem of UFO tools. Its adjustments are described in Metafont, a programming language that has been a standard in the LaTeX and mathematical typesetting world since 1977. The calculations are done with Metapost. As a web application it is built with an industry standard too: AngularJS.</p>
+					<p>The text-based and interchangeable UFO font source format has become an industry standard. Metapolator imports and exports UFOs, releasing a new animal into the ecosystem of UFO tools. Its adjustments are described in CPS, similar to CSS. The calculations are all done in JavaScript. As a web application it will be built with the latest technologies, like <a href="http://polymer-project.org/">Polymer</a>.</p>
 				</div></div>
 				</div>
 				<div class="col-lg-2 col-xs-1"></div>
@@ -571,7 +571,7 @@ amounts of axes, and link unlimited masters together into complex interpolation 
 					</div>
 					<div class=" col-md-4 ">
 						<ul>
-						<li>Metafont Parameters Available:</li>
+						<li>Metafont-like Parameters Available:</li>
 						<li>- tension, shifting, slanting, serifs, vertical metrics (including x-height</li>
 						<li>- stroke (pen) width, stroke direction, stroke angle</li>
 						<li>- glyph width, glyph spacing, font size</li>
