--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 			<div class="row">
 				<div class="col-xs-2"></div>
 				<div class="col-xs-8 leftalign">
-					<h2 class="white">Metapolator turns any existing outline font into a parameterised font system so you can get the fonts you really want.
+					<h2 class="white">Metapolator will turn any existing outline font into a parameterised font system, so you can get the fonts you really want.
 					<br><br>
 					Today typography is becoming more and more important for us each to express ourselves. Typography has become an extension of who we are. Our choice of words to express the ideas in our minds is important, and so is the way that our typography expresses the emotions in our hearts. 
 					<br><br>
 					Billions of people are now online and each person need fonts that are tailor-made for themselves and their businesses. 
 					<br><br>
-					Metapolator’s multidimensional design space lets you explore an almost infinite number of new fonts and font families starting with only a single master font. Metapolator combines a powerful parametric system with an intuitive user interface to make type design inherently consistent and much faster.
+					Metapolator will have a multidimensional design space to explore an almost infinite number of new fonts and font families, starting with only a single master font. Metapolator will combine a powerful parametric system with an intuitive user interface to make type design inherently consistent and much faster.
 				</div>
 				<div class="col-xs-2"></div>
 			</div>
@@ -170,8 +170,8 @@
 				<div class="col-lg-8 col-xs-10"><div class="row">
 				<div class="col-md-4 white leftalign">
 					<h3>Tools</h3>
-					<p>Type designers need a toolbox to build a single typeface up into a family of styles. Metapolator provides an initial set of tools for
-common processes, and it is fully extendable.</p>
+					<p>Type designers need a toolbox to build a single typeface up into a family of styles. Metapolator will provide an initial set of tools for
+common processes, and it will be fully extendable.</p>
 						<ul>
 						<li>- spacing (tighter or looser)</li>
 						<li>- weight (regular to bold or light)</li>
@@ -180,11 +180,11 @@ common processes, and it is fully extendable.</p>
 				</div>
 				<div class=" col-md-4 white">
 					<h3>Workflow</h2>
-					<p>Type designers need tools that slide into their existing workflows. With Metapolator you can load fonts made with any traditional font editor.</p>
+					<p>Type designers need tools that slide into their existing workflows. With <a href="http://fontforge.github.io">Fontforge</a> you can load any font and save it in the UFO font format, and convert UFOs into any other format.</p>
 				</div>
 				<div class=" col-md-4 white leftalign">
 					<h3>Standards</h3>
-					<p>The text-based and interchangeable UFO font source format has become an industry standard. Metapolator imports and exports UFOs, releasing a new animal into the ecosystem of UFO tools. Its adjustments are described in CPS, similar to CSS. The calculations are all done in JavaScript. As a web application it will be built with the latest technologies, like <a href="http://polymer-project.org/">Polymer</a>.</p>
+					<p>The text-based and interchangeable <a href="http://unifiedfontobject.org/">UFO</a> font source format has become an industry standard. Metapolator imports and exports UFOs, releasing a new animal into the ecosystem of UFO tools. Its adjustments are described in CPS, similar to CSS. The calculations are all done in JavaScript. As a web application it will be built with the latest technologies, like <a href="http://polymer-project.org/">Polymer</a>.</p>
 				</div></div>
 				</div>
 				<div class="col-lg-2 col-xs-1"></div>
@@ -261,7 +261,7 @@ and by naming the parts we can control the system.</p>
 				</div>
 				<div class=" col-md-4 white leftalign">
 					<p>The Metapolator solution is to make copies of the original, and add specific parameter values to each copy. Then, instead of constantly switching on and off parameter values for one
-single meta-font, we select a pair of fonts and set the metapolation parameter, which simply travels inbetween font A and font B. Its just like a cross-fader that mixes 2 turntables.</p>
+single meta-font, we select a pair of fonts and interpolate them, which simply travels inbetween font A and font B. Its just like a cross-fader that mixes 2 turntables.</p>
 				</div></div>
 				</div>
 				<div class="col-lg-2 col-xs-1"></div>
@@ -318,7 +318,7 @@ single meta-font, we select a pair of fonts and set the metapolation parameter, 
 				<div class="col-lg-2 col-xs-1"></div>
 				<div class="col-lg-8 col-xs-10"><div class="row">
 				<div class="col-md-4 white leftalign">
-					<p>Cell replication with Metapolator: When we start using one single font, we can extrapolate to a 2nd replica by calculating a stroke from the glyph outline. From the stroke to the original outline, we can create new interpolations and extrapolations.</p>
+					<p>Replication with Metapolator: When we start using one single font, we can extrapolate to a 2nd replica by calculating a skeleton or ductus stroke from the glyph outline. The stroke can reconstruct the original outline exactly, and go on to can create new interpolations, extrapolations and interpretations of the form.</p>
 
 				</div>
 				<div class=" col-md-4 white">
@@ -402,7 +402,7 @@ designer. Metapolator is NOT drawing shapes out of nothing.</p>
 Metapolator, along with composites, anchor points and kerning values. </p>
 				</div>
 				<div class=" col-md-4 white leftalign">
-					<p>Additionally, if Metapolator sees that all the points in a contour are in pairs, with a point opposite each point, then you can control this contour as a stroke. This gives you finer control over control bezier control points.</p>
+					<p>Additionally, if Metapolator sees that all the points in a contour are in pairs, with a point opposite each point, then you can control this contour as a skeleton stroke. This gives you more control over your bezier control points.</p>
 				</div></div>
 				</div>
 				<div class="col-lg-2 col-xs-1"></div>
@@ -470,15 +470,14 @@ Metapolator, along with composites, anchor points and kerning values. </p>
 				<div class="col-lg-2 col-xs-1"></div>
 				<div class="col-lg-8 col-xs-10"><div class="row">
 				<div class="col-md-4 white leftalign">
-					<p>Metapolator has a modular design that allows you to create unlimited
-amounts of axes, and link unlimited masters together into complex interpolation environments.</p>
+					<p>Metapolator will allows you to use an unlimited number of axes, and link together an unlimited number of masters into complex interpolation design spaces to explore.</p>
 
 				</div>
 				<div class=" col-md-4 white">
-					<p>Again drawing a connection to the world of music productio, consider modular synthesizers, where stacks of modules (or masters, in our case) are linked in all possible ways.</p>
+					<p>Again drawing a connection to the world of music production, consider modular synthesizers, where stacks of modules (or masters, in our case) can be linked in all possible ways.</p>
 				</div>
 				<div class=" col-md-4 white leftalign">
-					<p>Metapolator lets you construct your very own Noordzij cubes.</p>
+					<p>Metapolator will let you construct your very own Noordzij cubes.</p>
 				</div></div>
 				</div>
 				<div class="col-lg-2 col-xs-1"></div>
@@ -494,7 +493,7 @@ amounts of axes, and link unlimited masters together into complex interpolation 
 	    <div class="container-fluid" >
 	    	<div class="row">
 	    		<div class="col-xs-12 centered" >
-	    			<h1>Effecting the outline is bad, effecting the stroke is awesome</h1>
+	    			<h1>Nudging the outline is bad, nudging the skeleton is awesome</h1>
 	    		</div><!-- /col-lg-8 -->
 	    	</div><!-- /row -->
 	    </div> <!-- /container-fluid -->
@@ -559,7 +558,7 @@ amounts of axes, and link unlimited masters together into complex interpolation 
 				<div class="col-md-8 col-xs-10"><div class="row">
 					<div class="col-md-4 leftalign">
 						<ul>
-						<li>Core Functionality:</li>
+						<li>Core Functionality Will Include:</li>
 						<li>- creating masters from instances</li>
 						<li>- duplicating masters</li>
 						<li>- positioning on-curve points</li>
@@ -571,7 +570,7 @@ amounts of axes, and link unlimited masters together into complex interpolation 
 					</div>
 					<div class=" col-md-4 ">
 						<ul>
-						<li>Metafont-like Parameters Available:</li>
+						<li>Metafont-like Parameters That Will Be Available:</li>
 						<li>- tension, shifting, slanting, serifs, vertical metrics (including x-height</li>
 						<li>- stroke (pen) width, stroke direction, stroke angle</li>
 						<li>- glyph width, glyph spacing, font size</li>
@@ -579,10 +578,10 @@ amounts of axes, and link unlimited masters together into complex interpolation 
 					</div>
 					<div class=" col-md-4  leftalign">
 						<ul>
-						<li>Command Line Tool:</li>
+						<li>Command Line Tool Will Allow:</li>
 						<li>- interpolation, extrapolation of outlines</li>
-						<li>- full kerning</li>
-						<li>- define unlimited axes and masters </li>
+						<li>- interpolation of kerning</li>
+						<li>- define unlimited axes</li>
 						<li>- replicate instances from other interpolation tools, 1:1</li></ul>
 					</div>
 				</div>
@@ -636,23 +635,24 @@ amounts of axes, and link unlimited masters together into complex interpolation 
         <li>
             <div class="timeline-panel">
             <div class="timeline-heading">
-              <h3 class="timeline-title">Release Date: Beta</h3>
+              <h3 class="timeline-title">Release Date: v1.0.0, A Developer's Version</h3>
             </div>
             <div class="timeline-body">
-              <p>Launching a beta version for brave users to test and explore</p>
+              <p>Launching a beta version for developers and brave users to test and explore</p>
             </div>
           </div>
         </li>
         <li>
             <div class="timeline-panel">
             <div class="timeline-heading">
-              <h3 class="timeline-title">Release Date: Alpha</h3>
+              <h3 class="timeline-title">Release Date: v2.0.0, A Designer's Version</h3>
             </div>
             <div class="timeline-body">
-              <p>Inviting type designers around the world to review, use and contribute</p>
+              <p>Inviting type designers and typographers around the world to review, use and contribute</p>
             </div>
           </div>
         </li>
+
             </ul>
 				</div>
 				<div class="col-sm-2 col-xs-1">
