--- a/app/red-pill.html
+++ b/app/red-pill.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Metapolator: the Red Pill Interface</title>
+    <title>Metapolator Neue: the Red Pill Interface</title>
     
     <!-- less 
     
@@ -33,7 +33,8 @@
   <script src="/lib/bower_components/requirejs/require.js" data-main="/lib/redPillMain.js"></script>
   </head>
   <body>
-    <h1>Metapolator</h1>
+    <h1>Metapolator Neue</h1>
+    <h3>The Red Pill Interface</h3>
     <red-pill></red-pill>
   </body>
 </html>
