Website images upload

--- a/Neue/website/index.html
+++ b/Neue/website/index.html
@@ -34,42 +34,20 @@
 
     <div class="container">
 
-      <div class="masthead">
-        <h3 class="text-muted">Project name</h3>
-        <ul class="nav nav-justified">
-          <li class="active"><a href="http://getbootstrap.com/examples/justified-nav/#">Home</a></li>
-          <li><a href="http://getbootstrap.com/examples/justified-nav/#">Projects</a></li>
-          <li><a href="http://getbootstrap.com/examples/justified-nav/#">Services</a></li>
-          <li><a href="http://getbootstrap.com/examples/justified-nav/#">Downloads</a></li>
-          <li><a href="http://getbootstrap.com/examples/justified-nav/#">About</a></li>
-          <li><a href="http://getbootstrap.com/examples/justified-nav/#">Contact</a></li>
-        </ul>
-      </div>
-
       <!-- Jumbotron -->
-      <div class="jumbotron">
-        <h1>Marketing stuff!</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
-        <p><a class="btn btn-lg btn-success" href="http://getbootstrap.com/examples/justified-nav/#" role="button">Get started today</a></p>
-      </div>
+        <div class="col-lg-2"></div><div class="col-lg-8">
+            <img src="Links/Mn_header.svg" style="width: 100%">
+        </div>
 
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-lg-4">
-          <h2>Safari bug warning!</h2>
-          <p class="text-danger">As of v7.0.1, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-primary" href="http://getbootstrap.com/examples/justified-nav/#" role="button">View details »</a></p>
-        </div>
-        <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-primary" href="http://getbootstrap.com/examples/justified-nav/#" role="button">View details »</a></p>
-       </div>
-        <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-          <p><a class="btn btn-primary" href="http://getbootstrap.com/examples/justified-nav/#" role="button">View details »</a></p>
+        <div class="col-lg-12">
+            <h1>Metapolator Neue</h1>
+            <p class="left lead">Metapolator will be a web-based parametric font editor, providing a GUI for designing with UFO fonts and Metafont technologies. Metapolator is intended for type designers to design large font families faster, and for typographically sensitive graphic designers to adjust their libre fonts for their exact needs. For example, expanding a single style design into a family of weights and widths, or fine-tuning the weight and width of a font for your exact needs.
+</p>
+        </div> 
+        <div class="col-lg-12">
+            <img src="Links/Univers.svg" style="width: 100%">
         </div>
       </div>
 
