--- a/Neue/website/index.html
+++ b/Neue/website/index.html
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-                        <h1 class="brand-heading"><img src="Links/Mn_header.svg" style="width:10%"> Metapolator Neue</h1><br>
+                        <h1 class="brand-heading"><img src="Links/MN.svg" style="width:10%"> Metapolator Neue</h1><br>
                         <p class="intro-text Lead">Metapolator will be a web-based parametric font editor, providing a GUI for designing with UFO fonts and Metafont technologies.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
