--- a/Neue/website/index.html
+++ b/Neue/website/index.html
@@ -59,18 +59,21 @@
       
      <div class="container">
       <!-- Start with the Univers -->
+         <h3>Metapolator Neue</h3>
         <p>Metapolator is intended for type designers to design large font families faster, and for typographically sensitive graphic designers to adjust their libre fonts for their exact needs. For example, expanding a single style design into a family of weights and widths, or fine-tuning the weight and width of a font for your exact needs.</p><br>
     <div class="row">
         <div class="col-md-12"><img src="Links/Univers.svg" style="width: 100%"></div>
       </div><br>
          
         <!-- Chapter 2 -->
+         <h3>Extrapolation from one Master</h3>
             <p>Metapolator first provides a typical 'super' interpolation system that works with unlimited numbers of masters and axes, and will load and save normal UFO fonts.
 It will go further, into 'metapolation': leveraging parameterization to create new masters. This will work best when glyphs are drawn as separate, overlapping shapes with pairs of points along each edge. This style of digital drawing is commonly practiced, as it helps when drawing shapes resembling strokes of pens.</p><br>
     <!-- Poster -->
     <div class="row">
-        <div class="col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2"><img src="Links/Poster.jpg" style="width: 100%"></div>
+        <div class="col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2"><img src="Links/Poster.svg" style="width: 100%"></div>
     </div><br>
+         <h3>Metafont for Ufo</h3>
         <p>The original drawn outline can be reconstructed from an inferred central skeleton (ductus) and Hobby splines (from Metafont.) This reconstruction process is flexible, working similarly to the 'nudge' tools of other font editors.
 Metapolator will allow designers to use Metafont technology without have to write any Metafont code. But if you'd like that, check out metaflop.com</p><br>
     <!-- Chapter 3 -->
@@ -82,6 +85,7 @@ Metapolator will allow designers to use Metafont technology without have to writ
         <div class="col-md-6"><img src="Links/Optima.svg" style="width:100%"></div>
         <div class="col-md-6"><img src="Links/Unknow.svg" style="width:100%"></div>
     </div><br>
+         <h3>Contact</h3>
             <p>Metapolator is not yet released. See the wiki for developer installation instructions if you'd like to try it out and are comfortable using development tools.</p><br>
     <!-- User Interface -->
       <div class="row">
@@ -96,7 +100,7 @@ Metapolator will allow designers to use Metafont technology without have to writ
 <br>Our user community is vigorously involved in development, through <a href="https://plus.google.com/communities/110027004108709154749">Google+</a>.</p><br>
       <!-- Site footer -->
       <div class="footer">
-        <p>© Metapolator 2014</p>
+        <p class="small">© Metapolator 2014</p>
       </div>
 
     </div> <!-- /container -->
