--- a/Neue/website/animation/index.html
+++ b/Neue/website/animation/index.html
@@ -4,11 +4,9 @@
     <title>Two.js: Animate Stroke</title>
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no">
-    <link rel="image_src" href="../images/logo.gif" />
-    <link rel="shortcut icon" type="image/gif" href="../images/favicon.gif">
-    <script src="../third-party/url.js"></script>
-    <script src="../third-party/jquery.js"></script>
-    <script src="../third-party/two.js"></script>
+    <script src="/src/url.js"></script>
+    <script src="/src/jquery.js"></script>
+    <script src="/src/two.js"></script>
     <style>
       body {
         background: rgb(255, 255, 255);
@@ -27,7 +25,7 @@
             fullscreen: true
           }).appendTo(document.body);
 
-          $.get('../images/devanagari.svg', function(doc) {
+          $.get('/images/devanagari.svg', function(doc) {
 
             var fresh = two.interpret($(doc).find('svg')[0]);
             fresh.subdivide();
