--- a/Neue/website/animation/index.html
+++ b/Neue/website/animation/index.html
@@ -4,9 +4,9 @@
     <title>Two.js: Animate Stroke</title>
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no">
-    <script src="/src/url.js"></script>
-    <script src="/src/jquery.js"></script>
-    <script src="/src/two.js"></script>
+    <script src="src/url.js"></script>
+    <script src="src/jquery.js"></script>
+    <script src="src/two.js"></script>
     <style>
       body {
         background: rgb(255, 255, 255);
@@ -25,7 +25,7 @@
             fullscreen: true
           }).appendTo(document.body);
 
-          $.get('/images/devanagari.svg', function(doc) {
+          $.get('images/devanagari.svg', function(doc) {
 
             var fresh = two.interpret($(doc).find('svg')[0]);
             fresh.subdivide();
