--- a/Neue/website/Bootstrap_archive.html
+++ b/Neue/website/Bootstrap_archive.html
@@ -31,13 +31,12 @@
         
       <div class="row">
           <div class="col-md-2">
-          <img src="/Links/logo.svg" class="img-responsive" alt="Logo" style="widht:100px">
           <div class="bs-docs-sidebar hidden-print hidden-xs hidden-sm" role="complementary">
-            <ul class="nav bs-docs-sidenav">
+            <br><img src="/Links/logo.svg" class="img-responsive" alt="Logo" width="70px">
+              <ul class="nav bs-docs-sidenav">
                 <li>
   <a href="#home">Home</a>
   <ul class="nav">
-    <li><a href="#home-home">Home</a></li>
   </ul>
                 </li>
                 <li>
@@ -68,11 +67,11 @@
             </a>
           </div>
         </div>
-        <div class="col-md-6" role="main">
+        <div class="col-md-7" role="main">
           <div class="bs-docs-section">
   <h1 id="home" class="page-header">Metapolator Neue</h1>
   <h3 id="home-home">Home</h3>
-  <p class="lead">Metapolator is intended for type designers to design large font families faster, and for typographically sensitive graphic designers to adjust their libre fonts for their exact needs.</p>
+  <p>Metapolator is intended for type designers to design large font families faster, and for typographically sensitive graphic designers to adjust their libre fonts for their exact needs.</p>
 
   <h1 id="metapolation" class="page-header">Metapolation</h1>            
   <h3 id="metapolation-concept">Concept</h3>
