--- a/Neue/website/index.html
+++ b/Neue/website/index.html
@@ -12,18 +12,13 @@
     <title>Metapolator Neue</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
 
     <!-- Documentation extras -->
-    <link href="/css/docs.css" rel="stylesheet">
+    <link href="css/docs.css" rel="stylesheet">
     <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
     <script src="http://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
-
-
-    <!-- Favicons -->
-    <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png">
-    <link rel="icon" href="/favicon.ico">
 
   </head>
   <body>
