--- a/Neue/website/index.html
+++ b/Neue/website/index.html
@@ -103,7 +103,7 @@
                     <p>Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.</p>
 				</div> 
         
-                <div class="col-md-8 col-md-offset-2 article"><img src="Links/poster.svg" class="img-responsive" alt="Responsive image"></div> <!-- Picture -->
+                <div class="col-md-8 col-md-offset-2 article"><img src="Links/Poster.svg" class="img-responsive" alt="Responsive image"></div> <!-- Picture -->
                 <div class="col-md-2 caption"><p>Can work with any Ufo file</p></div> <!-- Caption -->
                 
                 <div class="col-md-8 col-md-offset-2 article"> <!-- Article -->
