--- a/Neue/website/animation/index.html
+++ b/Neue/website/animation/index.html
@@ -25,7 +25,7 @@
             fullscreen: true
           }).appendTo(document.body);
 
-          $.get('images/devanagari.svg', function(doc) {
+          $.get('Links/devanagari.svg', function(doc) {
 
             var fresh = two.interpret($(doc).find('svg')[0]);
             fresh.subdivide();
