--- a/slider/index.html
+++ b/slider/index.html
@@ -71,13 +71,13 @@
             <!-- end of project -->
 
             <div id="view-buttons">
-                <div id="menu-item-0" class="menu-item menu-item-current" onClick="moveLandscape(0, 1);">
+                <div id="menu-item-0" class="menu-item menu-item-current">
                     Parameters
                 </div>
-                <div id="menu-item-1" class="menu-item" onClick="moveLandscape(1, 1);">
+                <div id="menu-item-1" class="menu-item">
                     Design spaces
                 </div>
-                <div id="menu-item-2" class="menu-item" onClick="moveLandscape(2, 1);">
+                <div id="menu-item-2" class="menu-item">
                     Fonts
                 </div>
             </div>
