--- a/slider/index.html
+++ b/slider/index.html
@@ -136,7 +136,7 @@
 
                 <div id="panel-3" class="panel">
 
-                    <div id="masters" class="sub-panel">
+                    <div id="subpanel-3-top" class="sub-panel">
                         <div class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Masters <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
@@ -193,7 +193,7 @@
                     </div>
                     <!-- end of masters sub panel -->
 
-                    <div id="adjustment-masters" class="sub-panel">
+                    <div id="subpanel-3-bottom" class="sub-panel">
                         <div class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Adjustment Masters <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
@@ -232,17 +232,21 @@
                     </div>
                     <!-- end of adustment masters sub panel -->
 
+                    <div class="divider-hor" id="divider-3">
+                        <div class="divider-left"></div>
+                    </div>
+
                 </div>
                 <!-- end of masters-container -->
 
                 <div id="panel-4" class="panel">
-                    <div id="design-space" class="sub-panel">
+                    <div id="subpanel-4-top" class="sub-panel">
                         <div id="block-1" class="block"></div>
                         <div id="block-2" class="block"></div>
                         <div id="block-3" class="block"></div>
                     </div>
 
-                    <div id="specimen-2" class="sub-panel standard-padding">
+                    <div id="subpanel-4-bottom" class="sub-panel standard-padding">
                         <div ng-repeat="index in mastersInView">
                             <div class="specimen-info-holder">
                                 <div class="specimen-info">
@@ -266,6 +270,10 @@
                         </div>
                     </div>
                     <!-- end of specimen 2 -->
+
+                    <div class="divider-hor" id="divider-4">
+                        <div class="divider-left"></div>
+                    </div>
                 </div>
                 <!-- end of design space container -->
 
