--- a/Neue/website/index.html
+++ b/Neue/website/index.html
@@ -101,7 +101,7 @@
 				</div> <!-- /Article -->
                 
                 <div class="col-md-8 col-md-offset-2"><img src="Links/placeholder.svg" class="img-responsive" alt="Responsive image"></div> <!-- Picture -->
-                <div class="col-md-2 caption"><p>Hacker Gui is the new interface with some nice graphic elements</p></div> <!-- Caption -->
+                <div class="col-md-2 caption">Hacker Gui is the new interface with some nice graphic elements</div> <!-- Caption -->
                 
                 <div class="col-md-8 col-md-offset-2 article"> <!-- Article -->
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor.</p>
