--- a/Neue/website/index.html
+++ b/Neue/website/index.html
@@ -96,8 +96,12 @@
             <div class="row clearfix"> <!-- Main row -->
                 
                 <div class="col-md-8 col-md-offset-2 article"> <!-- Article -->
-                    <h1 id="metapolation">Metapolation</h1> <!-- Title of Article -->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. </p>
+                    <h1 id="metapolation">Introduction</h1> <!-- Title of Article -->
+                    <p>Metapolator can turn any existing outline font into a parameterised font system.</p>
+<p>Metapolator is intended for type designers to design large font families faster, and for typographically sensitive graphic designers to adjust their fonts for their exact needs. For example, expanding a single style design into a family of weights and widths, or fine-tuning the weight and width of a font for your exact needs.</p>
+<p>Metapolator first provides a typical 'super' interpolation system that works with unlimited numbers of masters and axes, and will load and save normal UFO fonts.</p>
+<p>It will go further, into 'metapolation': leveraging parameterization to create new masters. This will work best when glyphs are drawn as separate, overlapping shapes with pairs of points along each edge. This style of digital drawing is commonly practiced, as it helps when drawing shapes resembling strokes of pens.</p>
+<p>The original drawn outline can be reconstructed from an inferred central skeleton and Hobby splines. This reconstruction process is flexible, working similarly to the 'nudge' tools of other font editors.</p>
 				</div> <!-- /Article -->
                 
                 <div class="col-md-8 col-md-offset-2"><img src="Links/placeholder.svg" class="img-responsive" alt="Responsive image"></div> <!-- Picture -->
