--- a/red-pill-demo/index.html
+++ b/red-pill-demo/index.html
@@ -26,7 +26,7 @@
     <script src="/lib/bower_components/requirejs/require.js" data-main="/lib/redPillMain.js"></script>
     <!-- end of development -->
     <!-- production -->
-    <link rel="stylesheet" type="text/css" href="/main.css" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
     <script src="main.js"></script>
     <!-- end of production -->
   </head>
