--- a/Neue/website/index.html
+++ b/Neue/website/index.html
@@ -215,7 +215,7 @@ Presentation(link to old website).
 Fonts need to be prepared in a certain way so the can be processed with Metapolator. For example, every glyph needs to show up an equal amount of pair points. One way to achieve this is to break up a glyph into its induvidual parts and strokes.
 <p>
 <br>
-<img src="latin.svg" alt="glyphs and parts" style="width: 700px">
+<img src="Latin.svg" alt="glyphs and parts" style="width: 700px">
 <br>
 <br>
 <em>3 New Fontfamilies</em></br>
