update neue neue

--- a/Neue/website/index.html
+++ b/Neue/website/index.html
@@ -183,12 +183,12 @@ a:active {
 <br>
 
 <p>“Metapolator is an open web tool for making many fonts. It supports working in a font design space, instead of one glyph, one face, at a time.
-
+<p><br>
 With Metapolator, ‘pro’ font designers are able to create and edit fonts and font families much faster, with inherent consistency. They gain unique exploration possibilities and the tools to quickly adapt typefaces to different media and domains of use.
-
+<p><br>
 With Metapolator, typographers gain the possibility to change existing fonts — or even create new ones — to their needs.
-
-Metapolator is extendible through plugins and custom specimens. It contains all the tools and fine control that designers need to finish a font.” 1
+<p><br>
+Metapolator is extensible through plugins and custom specimens. It contains all the tools and fine control that designers need to finish a font.” 1
 
 <div class="footnotes">
 <hr/>
@@ -201,25 +201,27 @@ Metapolator is extendible through plugins and custom specimens. It contains all 
 </div>
 
 <p>
-<h1>Approaching our Product Vision</h1>
+<h1>Approaching our Project Vision</h1>
 <br>
 <em>Red Pill and Blue Pill</em></br>
-In May 2014 the metapolator team has started to develop a professional version based on last years prototypes. Under the hood, Lasse Fister has developed Red Pill, a develper interface with a unique system to work with parameters (css) together with ufo.js. We completely left out metafont this time but kept most of its functionality and concepts like the brilliant Hobby Spline. At the same time Peter Sikking layd out his cornerstones for the User Interface Architecture which is serving now as the guide to the new User Interace (which is under heavy development right now). Digging from both sides under the Mt. Metapolator, we hope we can present Blue Pill, a version 1.0 by the end of the year. In the meantime we can share our last presentation and welcome you on our G+ community. 
-Presentation(link to old website). 
+In May 2014 the metapolator team has started to develop a professional version based on last year’s <a href="http://metapolator.tumblr.com/" title="Metapolator prototypes">prototypes</a>. Under the hood, Lasse Fister has developed <a href="http://metapolator.com/red-pill-demo/" title="Red Pill">Red Pill</a>, a developer interface with a unique system to work with parameters <a href="https://github.com/metapolator/metapolator/wiki/cascading-parameter-sheets" title="cascading parameter sheets">(CPS)</a> together with <a href="http://lib.ufojs.org/" title="ufo.js">ufo.js</a>. We completely left out <a href="http://en.wikipedia.org/wiki/Metafont" title="Metafont">Metafont</a> this time, but kept most of its functionality and concepts like the brilliant Hobby Spline.
+<p>
+At the same time Peter Sikking laid out the cornerstones for the User Interface Architecture which is serving now as the design of the new User Interface (which is under heavy development right now). Digging from both sides under the Mt. Metapolator, we hope we can present Blue Pill, a version 1.0 by the end of the year. In the meantime we can share our last <a href="http://www.metapolator.com/pre/" title="We Need Fonts">presentation</a> and welcome you on our <a href="https://plus.google.com/communities/110027004108709154749" title="Metapolator G+ community">G+</a> community.
+
 
 <center></br></br>* * *</br></center>
 <p>
 <h1>Fonts designed for and with Metapolator</h1>
 <br>
 <em>Pre-Metapolating</em></br>
-Fonts need to be prepared in a certain way so the can be processed with Metapolator. For example, every glyph needs to show up an equal amount of pair points. One way to achieve this is to break up a glyph into its induvidual parts and strokes.
+Fonts need to be prepared in a certain way so the can be processed with Metapolator. For example, every glyph needs to show up an equal amount of pair points. One way to achieve this is to break up a glyph into its individual parts and strokes. As soon we're ready with beta testing we will show several user cases.
 <p>
 <br>
 <img src="Latin.svg" alt="glyphs and parts" style="width: 700px">
 <br>
 <br>
-<em>3 New Fontfamilies</em></br>
-Alice, Sean Sans and Breite are beeing developed as the first true Metapolator font families.
+<em>New Fontfamilies</em></br>
+<a href="http://weiweihuanghuang.github.io/Alice-Devanagari/" title="Alice">Alice</a>, <a href="https://github.com/metapolator/sean" title="Sean Sans">Sean Sans</a> and <a href="https://github.com/metapolator/Breite" title="Breite">Breite</a> are being developed as the first true Metapolator font families.
 <br>
 <p>
 <br>
