include codemiror in the demo build
add io as a angular constant/service

outline switch between demo and normall mode

--- a/app/red-pill.html
+++ b/app/red-pill.html
@@ -26,6 +26,7 @@
     <script src="/lib/bower_components/requirejs/require.js" data-main="/lib/redPillMain.js"></script>
     <!-- end of development -->
     <!-- production
+    <script> window.demoMode = true; </script>
     <link rel="stylesheet" type="text/css" href="main.css" />
     <script src="main.js"></script>
     <!-- end of production -->
